tenace (0.11) upstream; urgency=low

  * Import dds 2.0.1.
  * Show dds version number in about dialog.

 -- Christoph Berg <myon@debian.org>  Sun, 23 May 2010 13:19:25 +0200

tenace (0.10) upstream; urgency=low

  * Yet another GUI change, now using GtkBuilder.
  * Port to dds 2.0:
    + Use gnulib to import "nproc".
    + Use threads to parallelize parscore computation.

 -- Christoph Berg <myon@debian.org>  Sun, 25 Apr 2010 01:04:24 +0200

tenace (0.9) upstream; urgency=low

  * Code ported to Windows for compiling with mingw32.

 -- Christoph Berg <myon@debian.org>  Sun, 09 Aug 2009 21:46:31 +0200

tenace (0.8) upstream; urgency=low

  * Implement printing, including "magic card" labels.
  * Some lin parser improvements to rudimentarily parse BM2000 data.
  * Include dds copy in our source to facilitate compilation on systems not
    providing libdds.a.
  * New example: triple-coup.lin.
  * GUI uses libglade.

 -- Christoph Berg <myon@debian.org>  Sat, 24 Jan 2009 20:51:51 +0100

tenace (0.7) upstream; urgency=low

  * Use the currently loaded file for greying out already played cards, this
    looks nicer, and fixes the fact that grey.svg was not looked for in
    --prefix. Thanks to Mark Voorhies for spotting.
  * Add contrib/bonded.svg for convenience.
  * Board list can be reordered via the options menu.

 -- Christoph Berg <myon@debian.org>  Mon, 24 Mar 2008 23:50:38 +0100

tenace (0.6) upstream; urgency=low

  * Solver:
    + Always use dealt cards for parscore computation.
    + Parscore computation was broken when S makes more tricks than N.
  * UI:
    + Move fast forward/rewind to menu, make to buttons go one trick
      forward/backward, and generally reorder menu.
    + Support dragging to/from card window.
    + Implement options window and read/write ~/.config/tenacerc as keyfile.
    + Card filename and rendering size are now configurable.
    + Sort recently used files by time.